# hanaforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  HanaForge_PRD (1).docx  README.md  audit1603.md  extract_prd.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
application/commands/: approve_runbook.py  assess_bp_consolidation.py  assess_universal_journal.py  create_data_pipeline.py  create_infrastructure_plan.py  create_migration_plan.py  create_monitoring_dashboard.py  create_programme.py  estimate_costs.py  evaluate_gate.py  execute_migration_step.py  export_remediation_backlog.py  export_test_scenarios.py  generate_board_presentation.py  generate_interface_tests.py  generate_lessons_learned.py  generate_runbook.py  generate_terraform.py  generate_test_scenarios.py  generate_transformation_rules.py  log_hypercare_incident.py  run_abap_analysis.py  run_agent_task.py  run_data_profiling.py  run_migration_batch.py  run_readiness_check.py  start_cutover.py  start_discovery.py  start_hypercare.py  start_pipeline_run.py  update_cutover_task.py  upload_abap_source.py  upload_data_export.py  validate_data_pipeline.py
application/dtos/: agent_dto.py  analysis_dto.py  cutover_dto.py  data_dto.py  hana_bq_dto.py  infrastructure_dto.py  migration_dto.py  programme_dto.py  test_dto.py
application/orchestration/: abap_analysis_workflow.py  dag_orchestrator.py  discovery_workflow.py
application/queries/: get_analysis_results.py  get_audit_log.py  get_benchmark_estimate.py  get_cutover_status.py  get_data_pipeline.py  get_data_profiling_results.py  get_hypercare_status.py  get_infrastructure_plan.py  get_migration_status.py  get_pipeline_run.py  get_programme.py  get_test_results.py  get_traceability_matrix.py  list_data_pipelines.py  list_pipeline_runs.py  list_programmes.py
application/services/: hana_connection_merge.py
domain/: exceptions.py
domain/entities/: __init__.py  agent_task.py  audit_entry.py  benchmark_entry.py  custom_object.py  cutover_execution.py  cutover_runbook.py  data_domain.py  data_pipeline.py  hypercare_session.py  infrastructure_plan.py  migration_task.py  (+6 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: demo_hana_bigquery.sh  run_demo.sh
(+200 files in other folders)
