[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "application*", "infrastructure*", "presentation*"]

[project]
name = "hanaforge"
version = "1.0.0"
description = "AI-Native SAP S/4HANA Migration Platform — Google Cloud Native"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "PyJWT>=2.9.0",
    "google-api-core>=2.23.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=2.18.0",
    "structlog>=24.4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
hana = [
    "hdbcli>=2.19.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
ci = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
